threading added to search

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,18 @@ Notion PARA/NotionSearch.dproj.local
 Notion PARA/Win32/Debug/uMain.dcu
 Notion PARA/Win32/Debug/NotionSearch.exe
 Notion PARA/Win32/Debug/NotionSearch.log
+Notion PARA/__history/uMain.fmx.~10~
+Notion PARA/__history/uMain.fmx.~11~
+Notion PARA/__history/uMain.fmx.~8~
+Notion PARA/__history/uMain.fmx.~9~
+Notion PARA/__history/uMain.pas.~26~
+Notion PARA/__history/uMain.pas.~27~
+Notion PARA/__history/uMain.pas.~28~
+Notion PARA/__history/uMain.pas.~29~
+Notion PARA/__history/uMain.pas.~30~
+Notion PARA/__history/uMain.pas.~31~
+Notion PARA/__history/uMain.pas.~32~
+Notion PARA/__history/uMain.pas.~33~
+Notion PARA/__history/uMain.pas.~34~
+Notion PARA/__history/uMain.pas.~35~
+Notion PARA/NotionSearch.identcache
