multi-threading added into NotionDrive class
see notionPara execution log for an execution sample

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,6 @@ Notion PARA/__history/uMain.pas.~33~
 Notion PARA/__history/uMain.pas.~34~
 Notion PARA/__history/uMain.pas.~35~
 Notion PARA/NotionSearch.identcache
+/Notion PARA/__history
+/Notion PARA/Win32
+*.tvsconfig
