some basic information about the projects in readme files

--- a/.gitignore
+++ b/.gitignore
@@ -334,3 +334,6 @@ Notion PARA/NotionTests/Win32/Debug/uNotionTests.dcu
 Notion PARA/NotionTests/Win32/Debug/uNotionTypes.dcu
 Notion PARA/NotionTests/Win32/Debug/uPARATypes.dcu
 Notion PARA/NotionTests/Win32/Debug/uThreadedGet.dcu
+Notion PARA/NotionPARA/__history/README.md.~1~
+Notion PARA/NotionPARAInterfaces/__history/README.md.~1~
+Notion PARA/NotionSearch/__history/README.md.~1~
