fetching of an entire dataset implemented

--- a/.gitignore
+++ b/.gitignore
@@ -337,3 +337,30 @@ Notion PARA/NotionTests/Win32/Debug/uThreadedGet.dcu
 Notion PARA/NotionPARA/__history/README.md.~1~
 Notion PARA/NotionPARAInterfaces/__history/README.md.~1~
 Notion PARA/NotionSearch/__history/README.md.~1~
+Notion PARA/NotionPARAInterfaces/__history/uPARATypes.pas.~32~
+Notion PARA/NotionPARAInterfaces/__history/uPARATypes.pas.~31~
+Notion PARA/NotionPARAInterfaces/__history/uPARATypes.pas.~30~
+Notion PARA/NotionPARAInterfaces/__history/uPARATypes.pas.~29~
+Notion PARA/NotionPARAInterfaces/__history/uPARATypes.pas.~28~
+Notion PARA/NotionPARAInterfaces/__history/uNotionPagesCollection.pas.~161~
+Notion PARA/NotionPARAInterfaces/__history/uNotionPagesCollection.pas.~160~
+Notion PARA/NotionPARAInterfaces/__history/uNotionPagesCollection.pas.~159~
+Notion PARA/NotionPARAInterfaces/__history/uNotionPagesCollection.pas.~158~
+Notion PARA/NotionPARAInterfaces/__history/uNotionPagesCollection.pas.~157~
+Notion PARA/NotionPARAInterfaces/__history/uNotionPagesCollection.pas.~156~
+Notion PARA/NotionPARAInterfaces/__history/uNotionPagesCollection.pas.~155~
+Notion PARA/NotionPARAInterfaces/__history/uNotionPagesCollection.pas.~154~
+Notion PARA/NotionPARAInterfaces/__history/uNotionPagesCollection.pas.~153~
+Notion PARA/NotionPARAInterfaces/__history/uNotionPagesCollection.pas.~152~
+Notion PARA/NotionPARAInterfaces/__history/uNotionManager.pas.~101~
+Notion PARA/NotionPARAInterfaces/__history/uNotionManager.pas.~100~
+Notion PARA/NotionPARAInterfaces/__history/uNotionInterfaces.pas.~40~
+Notion PARA/NotionPARAInterfaces/__history/uNotionInterfaces.pas.~39~
+Notion PARA/NotionPARAInterfaces/__history/NotionPARAInterfaces.dpr.~30~
+Notion PARA/NotionPARAInterfaces/__history/NotionPARAInterfaces.dpr.~29~
+Notion PARA/NotionPARAInterfaces/__history/NotionPARAInterfaces.dpr.~28~
+Notion PARA/NotionPARAInterfaces/__history/NotionPARAInterfaces.dpr.~27~
+Notion PARA/NotionPARA/__history/NotionPARA.dpr.~4~
+Notion PARA/NotionPARAInterfaces/Win32/Debug/__history/NotionPARAInterfaces.log.~1~
+Notion PARA/NotionPARAInterfaces/Win32/Debug/__history/NotionPARAInterfaces.log.~2~
+Notion PARA/NotionSearch/__history/NotionSearch.dpr.~6~
