--- a/Notion PARA/NotionPARA/NotionPARA.dproj
+++ b/Notion PARA/NotionPARA/NotionPARA.dproj
@@ -131,6 +131,7 @@
         <DCCReference Include="uThreadedGet.pas"/>
         <DCCReference Include="uGlobalConstants.pas"/>
         <None Include="Win32\Debug\PARA Playground.log"/>
+        <None Include="README.md"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
@@ -165,6 +166,12 @@
                 </DeployFile>
                 <DeployFile LocalName="$(BDS)\Redist\osx32\libcgunwind.1.0.dylib" Class="DependencyModule">
                     <Platform Name="OSX32">
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="README.md" Configuration="Debug" Class="ProjectFile">
+                    <Platform Name="Win32">
+                        <RemoteDir>.\</RemoteDir>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
