--- a/Notion PARA/NotionSearch/NotionSearch.dproj
+++ b/Notion PARA/NotionSearch/NotionSearch.dproj
@@ -220,6 +220,7 @@
         <DCCReference Include="..\NotionPARA\uNotionClient.pas"/>
         <DCCReference Include="..\NotionPARA\uPARATypes.pas"/>
         <DCCReference Include="..\NotionPARA\uThreadedGet.pas"/>
+        <None Include="README.md"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
@@ -254,6 +255,12 @@
                 </DeployFile>
                 <DeployFile LocalName="$(BDS)\Redist\osx32\libcgunwind.1.0.dylib" Class="DependencyModule">
                     <Platform Name="OSX32">
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="README.md" Configuration="Debug" Class="ProjectFile">
+                    <Platform Name="Win32">
+                        <RemoteDir>.\</RemoteDir>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
