run in threaded mode and documented in readme

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,7 @@ Notion PARA/NotionPARA/__history/NotionPARA.dpr.~4~
 Notion PARA/NotionPARAInterfaces/Win32/Debug/__history/NotionPARAInterfaces.log.~1~
 Notion PARA/NotionPARAInterfaces/Win32/Debug/__history/NotionPARAInterfaces.log.~2~
 Notion PARA/NotionSearch/__history/NotionSearch.dpr.~6~
+Notion PARA/NotionPARAInterfaces/Win32/Debug/__history/NotionPARAInterfaces.log.~4~
+Notion PARA/NotionPARAInterfaces/Win32/Debug/__history/NotionPARAInterfaces.log.~3~
+Notion PARA/NotionPARAInterfaces/__history/NotionPARAInterfaces.dpr.~32~
+Notion PARA/NotionPARAInterfaces/__history/NotionPARAInterfaces.dpr.~31~
