observer implemented for datasets

--- a/.gitignore
+++ b/.gitignore
@@ -368,3 +368,38 @@ Notion PARA/NotionPARAInterfaces/Win32/Debug/__history/NotionPARAInterfaces.log.
 Notion PARA/NotionPARAInterfaces/Win32/Debug/__history/NotionPARAInterfaces.log.~3~
 Notion PARA/NotionPARAInterfaces/__history/NotionPARAInterfaces.dpr.~32~
 Notion PARA/NotionPARAInterfaces/__history/NotionPARAInterfaces.dpr.~31~
+Interfaces/
+Notion PARA/NotionPARAInterfaces/__history/uNotionManager.pas.~102~
+Notion PARA/NotionPARAInterfaces/__history/uNotionManager.pas.~103~
+Notion PARA/NotionPARAInterfaces/__history/uNotionPagesCollection.pas.~165~
+Notion PARA/NotionPARAInterfaces/__history/uNotionPagesCollection.pas.~166~
+Notion PARA/NotionPARAInterfaces/__history/uNotionPagesCollection.pas.~167~
+Notion PARA/NotionPARAInterfaces/__history/uNotionPagesCollection.pas.~168~
+Notion PARA/NotionPARAInterfaces/__history/uNotionPagesCollection.pas.~169~
+Notion PARA/NotionPARAInterfaces/__history/uNotionPagesCollection.pas.~170~
+Notion PARA/NotionPARAInterfaces/__history/uNotionPagesCollection.pas.~171~
+Notion PARA/NotionPARAInterfaces/__history/uNotionPagesCollection.pas.~172~
+Notion PARA/NotionPARAInterfaces/__history/uNotionPagesCollection.pas.~173~
+Notion PARA/NotionPARAInterfaces/__history/uNotionPagesCollection.pas.~174~
+Notion PARA/NotionPARAInterfaces/__history/uNotionRESTClient.pas.~26~
+Notion PARA/NotionPARAInterfaces/__history/uNotionRESTClient.pas.~27~
+Notion PARA/NotionPARAInterfaces/__history/uNotionRESTClient.pas.~28~
+Notion PARA/NotionPARAInterfaces/__history/uNotionRESTClient.pas.~29~
+Notion PARA/NotionPARAInterfaces/__history/uNotionRESTClient.pas.~30~
+Notion PARA/NotionPARAInterfaces/__history/uPARATypes.pas.~33~
+Notion PARA/NotionPARAInterfaces/__history/uPARATypes.pas.~34~
+Notion PARA/NotionPARAInterfaces/__history/uPARATypes.pas.~35~
+Notion PARA/NotionPARAInterfaces/__history/uPARATypes.pas.~36~
+Notion PARA/NotionPARAInterfaces/__recovery/__recovery.ini
+Notion PARA/NotionPARAInterfaces/__recovery/uNotionPagesCollection.pas
+Notion PARA/NotionPARAInterfaces/Win32/Debug/__history/NotionPARAInterfaces.log.~5~
+Notion PARA/NotionPARAInterfaces/Win32/Debug/__history/NotionPARAInterfaces.log.~6~
+Notion PARA/NotionPARAInterfaces/Win32/Debug/__history/NotionPARAInterfaces.log.~7~
+Notion PARA/NotionPARAInterfaces/Win32/Debug/__history/NotionPARAInterfaces.log.~8~
+Notion PARA/NotionPARAInterfaces/Win32/Debug/__history/NotionPARAInterfaces.log.~9~
+Notion PARA/NotionSearch/Win32/Debug/NotionSearch.exe
+Notion PARA/Tests PARA Interfaces/__recovery/__recovery.ini
+Notion PARA/Tests PARA Interfaces/__recovery/uTestInterfaces.pas
+/Notion PARA/NotionPARAInterfaces/__history
+/Notion PARA/NotionPARAInterfaces/Win32/Debug/__history
+/Notion PARA/Tests PARA Interfaces/__history
