--- a/.gitignore
+++ b/.gitignore
@@ -403,3 +403,19 @@ Notion PARA/Tests PARA Interfaces/__recovery/uTestInterfaces.pas
 /Notion PARA/NotionPARAInterfaces/__history
 /Notion PARA/NotionPARAInterfaces/Win32/Debug/__history
 /Notion PARA/Tests PARA Interfaces/__history
+/__history
+/FD REST/__history
+/FD REST
+/FDAC projects
+/FireMonkey
+/Notion/Notion blogs/__history
+/Notion/Notion blogs/Win32
+/Notion/NotionInterfaces/__history
+/Notion/NotionPARAInterfaces/__history
+/Notion/NotionPARAInterfaces/Win32
+/Notion/NotionTests/Win32
+/Notion/Tests PARA Interfaces/Win32
+/NotionSearch/__history
+/NotionSearch/Win32
+uGlobalConstants.pas
+/Notion/NotionInterfaces/Win32
