implements specifics for PARA in Notion. Constants moved to .ini file

--- a/.gitignore
+++ b/.gitignore
@@ -419,3 +419,6 @@ Notion PARA/Tests PARA Interfaces/__recovery/uTestInterfaces.pas
 /NotionSearch/Win32
 uGlobalConstants.pas
 /Notion/NotionInterfaces/Win32
+NotionBlogs.ini
+config.ini
+NotionBlogs.ini
